# bevy_asm_tests

./: Cargo.toml  README.md  run.sh
examples/: command_queue_apply.rs  entity_insert.rs  entity_insert_sparse.rs  entity_remove.rs  entity_remove_intersection.rs  entity_remove_sparse.rs  entity_take.rs  event_reader.rs  event_writer.rs  message_reader.rs  message_writer.rs  query_for_each.rs  query_for_each_sparse.rs  query_get.rs  query_get_sparse.rs  query_iter.rs  query_iter_many.rs  query_iter_many_sparse.rs  query_iter_sparse.rs  query_state_for_each.rs  query_state_for_each_sparse.rs  query_state_get.rs  query_state_get_sparse.rs  query_state_iter.rs  query_state_iter_sparse.rs  resource_get.rs  resource_insert.rs  resource_remove.rs  world_get.rs  world_get_sparse.rs  world_insert_or_spawn_batch.rs
results/: bevy_ecs.s  command_queue_apply.s  entity_insert.s  entity_insert_sparse.s  entity_remove.s  entity_remove_intersection.s  entity_remove_sparse.s  entity_take.s  event_reader.s  event_writer.s  message_reader.s  message_writer.s  query_for_each.s  query_for_each_sparse.s  query_get.s  query_get_sparse.s  query_iter.s  query_iter_many.s  query_iter_many_sparse.s  query_iter_sparse.s  query_state_for_each.s  query_state_for_each_sparse.s  query_state_get.s  query_state_get_sparse.s  query_state_iter.s  query_state_iter_sparse.s  resource_get.s  resource_insert.s  resource_remove.s  world_get.s  world_get_sparse.s  world_insert_or_spawn_batch.s
