[package]
name = "bevy_asm_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy", branch = "main" }

[profile.release]
opt-level = 3
lto = "fat"

[[example]]
name = "entity_insert"
crate-type = ["lib"]

[[example]]
name = "entity_remove"
crate-type = ["lib"]

[[example]]
name = "entity_take"
crate-type = ["lib"]

[[example]]
name = "event_reader"
crate-type = ["lib"]

[[example]]
name = "event_writer"
crate-type = ["lib"]

[[example]]
name = "query_iter"
crate-type = ["lib"]

[[example]]
name = "query_iter_sparse"
crate-type = ["lib"]

[[example]]
name = "query_for_each"
crate-type = ["lib"]

[[example]]
name = "query_for_each_sparse"
crate-type = ["lib"]

[[example]]
name = "query_get"
crate-type = ["lib"]

[[example]]
name = "query_get_sparse"
crate-type = ["lib"]

[[example]]
name = "query_state_iter"
crate-type = ["lib"]

[[example]]
name = "query_state_iter_sparse"
crate-type = ["lib"]

[[example]]
name = "query_state_for_each"
crate-type = ["lib"]

[[example]]
name = "query_state_for_each_sparse"
crate-type = ["lib"]

[[example]]
name = "query_state_get"
crate-type = ["lib"]

[[example]]
name = "query_state_get_sparse"
crate-type = ["lib"]

[[example]]
name = "resource_get"
crate-type = ["lib"]

[[example]]
name = "resource_insert"
crate-type = ["lib"]

[[example]]
name = "resource_remove"
crate-type = ["lib"]

[[example]]
name = "world_get"
crate-type = ["lib"]

[[example]]
name = "world_get_sparse"
crate-type = ["lib"]

[[example]]
name = "world_insert_or_spawn_batch"
crate-type = ["lib"]
