[package]
name = "bevy_asm_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = { git = "https://github.com/james7132/bevy", branch = "thin-resources-and-sparse-sets" }

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = true

[[example]]
name = "command_queue_apply"
crate-type = ["lib"]

[[example]]
name = "entity_insert"
crate-type = ["lib"]

[[example]]
name = "entity_insert_sparse"
crate-type = ["lib"]

[[example]]
name = "entity_remove"
crate-type = ["lib"]

[[example]]
name = "entity_remove_sparse"
crate-type = ["lib"]


[[example]]
name = "entity_take"
crate-type = ["lib"]

[[example]]
name = "event_reader"
crate-type = ["lib"]

[[example]]
name = "event_writer"
crate-type = ["lib"]

[[example]]
name = "query_iter"
crate-type = ["lib"]

[[example]]
name = "query_iter_sparse"
crate-type = ["lib"]

[[example]]
name = "query_iter_many"
crate-type = ["lib"]

[[example]]
name = "query_iter_many_sparse"
crate-type = ["lib"]

[[example]]
name = "query_for_each"
crate-type = ["lib"]

[[example]]
name = "query_for_each_sparse"
crate-type = ["lib"]

[[example]]
name = "query_get"
crate-type = ["lib"]

[[example]]
name = "query_get_sparse"
crate-type = ["lib"]

[[example]]
name = "query_state_iter"
crate-type = ["lib"]

[[example]]
name = "query_state_iter_sparse"
crate-type = ["lib"]

[[example]]
name = "query_state_for_each"
crate-type = ["lib"]

[[example]]
name = "query_state_for_each_sparse"
crate-type = ["lib"]

[[example]]
name = "query_state_get"
crate-type = ["lib"]

[[example]]
name = "query_state_get_sparse"
crate-type = ["lib"]

[[example]]
name = "resource_get"
crate-type = ["lib"]

[[example]]
name = "resource_insert"
crate-type = ["lib"]

[[example]]
name = "resource_remove"
crate-type = ["lib"]

[[example]]
name = "world_get"
crate-type = ["lib"]

[[example]]
name = "world_get_sparse"

crate-type = ["lib"]
